/*
 * $Id: ChangeLog,v 1.6521 2009/07/30 09:00:05 marchuet Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2009-07-30 12:25 UTC-0800 Augusto Infante <augusto.infante@xharbour.com>
  * c:\xHarbour\source\rtl\hblog.prg
    ! Fixed METHOD Send() and METHOD Open() to close the file created with 
      FCreate and re-open it in shared mode after creating a new one.
      The problem is that after the file has crossed the size limit, the new file
      is read only.

2009-07-30 11:03 UTC+0100 Miguel Angel Marchuet <soporte-2@dsgsoftware.com>
  * source\rdd\bmdbfcdx\bmdbfcdx1.c
  * source\rdd\bmdbfcdx\redbfcdx1.c
  * source\rdd\dbfcdx\dbfcdx1.c
  * source\rdd\dbfmdx\dbfmdx1.c
    ! fixed silly type in previous upload. 

2009-07-30 00:01 UTC+0100 Miguel Angel Marchuet <soporte-2@dsgsoftware.com>
  * include\hbapirdd.h
  * include\hbapises.h
  * source\rdd\bmdbfcdx\bmdbfcdx1.c
  * source\rdd\bmdbfcdx\redbfcdx1.c
  * source\rdd\dbfcdx\dbfcdx1.c
  * source\rdd\dbfmdx\dbfmdx1.c
  * utils\hbfilere\hbfilere.c  
    * Ridiculous changes to do happy PellesC compiler.
    
  * makefile.pc
    + Added missing wsock32.lib to COMPILERLIBS

2009-07-29 19:40 UTC+0100 Miguel Angel Marchuet <soporte-2@dsgsoftware.com>
  * common.mak
  * compile.mak
  * makefile.bc
  * makefile.dc
  * makefile.gc
  * makefile.pc
  * makefile.vc
  * makefile.wc
  * mdir.bat
    - removed -p and changed to -gc0 from standard build.
    + Added build of Remote File Server. bin\hbfilere.exe
    
  * source\rdd\bmdbfcdx\bmdbfcdx1.c
    * minor pad changes.
    
  * source\rtl\filenet.c  
  * source\rdd\bmdbfcdx\redbfcdx1.c
  * source\rdd\dbf1net.c
    * Modified protocol to accel reading operations. by default it operates in turbo mode, if
      you want to acces to the same files by another rdd at the same time, you need RE_Turbo( .F. )